--- a/front/edit.css
+++ b/front/edit.css
@@ -43,14 +43,59 @@ html, body {
 }
   
 .points p{
-  font-size:18px;
-  font-family:sans-serif
+  font-size:14px;
+  font-family:Righteous;
 }
+
+.dropbtn{
+  width:18px;
+  height:auto;
+  position:absolute;
+  bottom:0px;
+  padding-left:4px;
+  padding-right:4px;
+}
+  
+
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    margin-top:85px;
+    margin-left:-75.5px;
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  }
+
+  .dropdown-content a {
+    font-family: Righteous;
+    font-size:16px;
+    color: black;
+    padding: 10px 14px;
+    text-decoration: none;
+    display: block;
+  }
+
+  .dropdown-content a:hover {background-color: #f1f1f1;}
+
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+  .dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+  }
+  
+  
+  
 }
 
-
-
-@media screen and (max-width: 2400px){
+/*@media screen and (max-width: 2400px){
   html, body {
     height: 100%;
     margin: 0;
@@ -98,4 +143,4 @@ html, body {
     font-size:18px;
     font-family:sans-serif
   }
-}
+}*/
