--- a/front/edit.css
+++ b/front/edit.css
@@ -39,7 +39,7 @@ html, body {
   width:auto;
   float:right;
   position: relative;
-  margin-right: 15px;
+  margin-right: 22px;
 }
   
 .points p{
@@ -61,7 +61,7 @@ html, body {
     position: relative;
     display: inline-block;
     margin-top:85px;
-    margin-left:-75.5px;
+    margin-left:-77px;
   }
 
   .dropdown-content {
@@ -72,7 +72,7 @@ html, body {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   }
 
-  .dropdown-content a {
+  .dropdown-content p {
     font-family: Righteous;
     font-size:16px;
     color: black;
@@ -90,6 +90,15 @@ html, body {
   .dropdown:hover .dropbtn {
     background-color: #3e8e41;
   }
+  
+.settings{
+  width:20px;
+  height: auto;
+  float:right;
+  position:relative;
+  margin-top:-54px;
+  padding-right:3px;
+}
   
   
   
